updated background gradient; fixed avatar display on mobile

--- a/assets/scss/screen.scss
+++ b/assets/scss/screen.scss
@@ -21,12 +21,7 @@ html {
 }
 
 body {
-  background:
-    linear-gradient(to bottom, rgba(255, 255, 255, 0.15) 0%,
-    rgba(0, 0, 0, 0.15) 100%),
-    radial-gradient(at top center, rgba(255, 255, 255, 0.40) 0%,
-    rgba(0, 0, 0, 0.40) 120%) #989898;
-  background-blend-mode: multiply, multiply;
+  background: repeating-linear-gradient(45deg, lighten($black, 2%) 0%, lighten($black, 2%) 10%, $black 0%, $black 50%) 0 / 15px 15px;
   background-color: $black;
   color: $gray-light;
   margin: 0;
@@ -245,6 +240,12 @@ button {
   }
 }
 
+@media (max-width: 768px) {
+  #avatar {
+    display: none;
+  }
+}
+
 @media (min-width: 426px) {
   body,
   input {
@@ -266,10 +267,6 @@ button {
   #location {
     bottom: 46px;
     height: 24px;
-  }
-
-  #avatar {
-    display: block;
   }
 }
 
